CHATS_SIT/force-app/main/default/objects/Obfuscate_Field_List__c/Obfuscate_Field_List__c.object-meta.xml
<CustomObject>
    <label>Obfuscate Field List</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Obfuscate Field List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obfuscate Field Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>