CHATS_SIT/force-app/main/default/objects/Obfuscate_Field_List__c/fields/Data_Format__c.field-meta.xml
<CustomField>
    <fullName>Data_Format__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Format</label>
    <length>60</length>
    <type>Text</type>
</CustomField>