CHATS_SIT/force-app/main/default/objects/Obfuscate_Field_List__c/fields/Field_Category__c.field-meta.xml
<CustomField>
    <fullName>Field_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>