CHATS_SIT/force-app/main/default/objects/Obfuscate_Field_List__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>