CHATS_SIT/force-app/main/default/objects/Obfuscate_Field_List__c/fields/UniqueExternalId__c.field-meta.xml
<CustomField>
    <fullName>UniqueExternalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UniqueExternalId</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>